修复小键盘长时间运行重启问题

--- a/RGB_KEYBOARD/Code/.vscode/settings.json
+++ b/RGB_KEYBOARD/Code/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
+    "C_Cpp.intelliSenseEngine": "Disabled",
     "files.associations": {
-        "Key.C": "c",
-        "DEBUG.C": "c",
-        "ws2812b.h": "c",
-        "key.h": "c"
+        "*.cjson": "jsonc",
+        "*.wxss": "css",
+        "*.wxs": "javascript",
+        "*.o": "plist",
+        "DEBUG.C": "cpp"
     }
 }
